// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SinglePostTags - Snapshots > matches snapshot with different postId 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <div
    class="hidden lg:flex gap-2"
    data-testid="container"
  >
    <input
      class="flex-1"
      data-testid="input"
      placeholder="add tag"
      value=""
    />
  </div>
  <div
    class="flex flex-row lg:flex-col flex-wrap gap-2 lg:pt-2"
  >
    <div
      class="lg:hidden flex items-center gap-1 cursor-pointer hover:opacity-80 transition-opacity border-dashed h-6"
      data-testid="badge"
      data-variant="outline"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`SinglePostTags - Snapshots > matches snapshot with many taggers 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <div
    class="hidden lg:flex gap-2"
    data-testid="container"
  >
    <input
      class="flex-1"
      data-testid="input"
      placeholder="add tag"
      value=""
    />
  </div>
  <div
    class="flex flex-row lg:flex-col flex-wrap gap-2 lg:pt-2"
  >
    <div
      class="flex flex-row gap-2 items-center"
    >
      <div
        class="flex items-center gap-1 cursor-pointer hover:opacity-80 transition-opacity"
        data-testid="badge"
        data-variant="default"
      >
        react
        <span
          class="opacity-70"
          data-size="sm"
          data-testid="typography"
        >
          8
        </span>
      </div>
      <button
        class="hidden lg:flex rounded-full w-8 h-8 p-0"
        data-size="sm"
        data-testid="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
      </button>
      <div
        class="hidden lg:flex items-center -space-x-2"
      >
        <a
          class="relative"
          data-testid="link"
          href="/profile/user1"
          style="z-index: 10; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="w-8 h-8 cursor-pointer hover:opacity-80 transition-opacity"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <a
          class="relative"
          data-testid="link"
          href="/profile/user2"
          style="z-index: 11; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="w-8 h-8 cursor-pointer hover:opacity-80 transition-opacity"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <a
          class="relative"
          data-testid="link"
          href="/profile/user3"
          style="z-index: 12; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="w-8 h-8 cursor-pointer hover:opacity-80 transition-opacity"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <a
          class="relative"
          data-testid="link"
          href="/profile/user4"
          style="z-index: 13; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="w-8 h-8 cursor-pointer hover:opacity-80 transition-opacity"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <a
          class="relative"
          data-testid="link"
          href="/profile/user5"
          style="z-index: 14; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="w-8 h-8 cursor-pointer hover:opacity-80 transition-opacity"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <div
          class="w-8 h-8 rounded-full bg-black text-white flex items-center justify-center cursor-pointer hover:opacity-80 transition-opacity text-xs font-medium"
          style="z-index: 15;"
        >
          +
          3
        </div>
      </div>
    </div>
    <div
      class="lg:hidden flex items-center gap-1 cursor-pointer hover:opacity-80 transition-opacity border-dashed h-6"
      data-testid="badge"
      data-variant="outline"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`SinglePostTags - Snapshots > matches snapshot with no tags 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <div
    class="hidden lg:flex gap-2"
    data-testid="container"
  >
    <input
      class="flex-1"
      data-testid="input"
      placeholder="add tag"
      value=""
    />
  </div>
  <div
    class="flex flex-row lg:flex-col flex-wrap gap-2 lg:pt-2"
  >
    <div
      class="lg:hidden flex items-center gap-1 cursor-pointer hover:opacity-80 transition-opacity border-dashed h-6"
      data-testid="badge"
      data-variant="outline"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`SinglePostTags - Snapshots > matches snapshot with tags 1`] = `
<div
  class="flex flex-col"
  data-testid="container"
>
  <div
    class="hidden lg:flex gap-2"
    data-testid="container"
  >
    <input
      class="flex-1"
      data-testid="input"
      placeholder="add tag"
      value=""
    />
  </div>
  <div
    class="flex flex-row lg:flex-col flex-wrap gap-2 lg:pt-2"
  >
    <div
      class="flex flex-row gap-2 items-center"
    >
      <div
        class="flex items-center gap-1 cursor-pointer hover:opacity-80 transition-opacity"
        data-testid="badge"
        data-variant="default"
      >
        react
        <span
          class="opacity-70"
          data-size="sm"
          data-testid="typography"
        >
          3
        </span>
      </div>
      <button
        class="hidden lg:flex rounded-full w-8 h-8 p-0"
        data-size="sm"
        data-testid="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
      </button>
      <div
        class="hidden lg:flex items-center -space-x-2"
      >
        <a
          class="relative"
          data-testid="link"
          href="/profile/user1"
          style="z-index: 10; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="w-8 h-8 cursor-pointer hover:opacity-80 transition-opacity"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <a
          class="relative"
          data-testid="link"
          href="/profile/user2"
          style="z-index: 11; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="w-8 h-8 cursor-pointer hover:opacity-80 transition-opacity"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
        <a
          class="relative"
          data-testid="link"
          href="/profile/user3"
          style="z-index: 12; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="w-8 h-8 cursor-pointer hover:opacity-80 transition-opacity"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="flex flex-row gap-2 items-center"
    >
      <div
        class="flex items-center gap-1 cursor-pointer hover:opacity-80 transition-opacity"
        data-testid="badge"
        data-variant="secondary"
      >
        javascript
        <span
          class="opacity-70"
          data-size="sm"
          data-testid="typography"
        >
          1
        </span>
      </div>
      <button
        class="hidden lg:flex rounded-full w-8 h-8 p-0"
        data-size="sm"
        data-testid="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search h-4 w-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
      </button>
      <div
        class="hidden lg:flex items-center -space-x-2"
      >
        <a
          class="relative"
          data-testid="link"
          href="/profile/user4"
          style="z-index: 10; filter: drop-shadow(0 2px 4px rgba(0, 0, 0, 0.3));"
        >
          <div
            class="w-8 h-8 cursor-pointer hover:opacity-80 transition-opacity"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              US
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      class="lg:hidden flex items-center gap-1 cursor-pointer hover:opacity-80 transition-opacity border-dashed h-6"
      data-testid="badge"
      data-variant="outline"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus h-3 w-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </div>
  </div>
</div>
`;
